tests/negative/test_expr_call_bad_end.orb
fnc foo(i32 x, i32 y) {}

fnc main() {
    foo(1, 2};
}